SEO Enhancement: Add geo-coordinates and 4 new location pages
- Added geo meta tags (geo.position, ICBM, geo.region) to all 9 existing city pages
- Added GeoCoordinates to Schema.org structured data for all location pages
- Created 4 new location pages: Wainfleet, West Lincoln, Beamsville, Fonthill
- Updated homepage service areas grid with new cities
- Updated footer links with new service areas
- Updated sitemap.xml with new pages

New pages include:
- locksmith-wainfleet.html (rural/lakeside focus)
- locksmith-west-lincoln.html (Smithville area)
- locksmith-beamsville.html (wine country/QEW)
- locksmith-fonthill.html (family community)

All pages include proper SEO markup with geo coordinates for better local search ranking.

--- a/index.html
+++ b/index.html
@@ -1456,6 +1456,22 @@
                     <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/><circle cx="12" cy="10" r="3"/></svg>
                     Pelham
                 </a>
+                <a href="locksmith-wainfleet.html" class="area-link">
+                    <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/><circle cx="12" cy="10" r="3"/></svg>
+                    Wainfleet
+                </a>
+                <a href="locksmith-west-lincoln.html" class="area-link">
+                    <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/><circle cx="12" cy="10" r="3"/></svg>
+                    West Lincoln
+                </a>
+                <a href="locksmith-beamsville.html" class="area-link">
+                    <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/><circle cx="12" cy="10" r="3"/></svg>
+                    Beamsville
+                </a>
+                <a href="locksmith-fonthill.html" class="area-link">
+                    <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/><circle cx="12" cy="10" r="3"/></svg>
+                    Fonthill
+                </a>
             </div>
         </div>
     </section>
@@ -1564,6 +1580,9 @@
                         <li><a href="locksmith-niagara-falls.html">Niagara Falls</a></li>
                         <li><a href="locksmith-thorold.html">Thorold</a></li>
                         <li><a href="locksmith-port-colborne.html">Port Colborne</a></li>
+                        <li><a href="locksmith-wainfleet.html">Wainfleet</a></li>
+                        <li><a href="locksmith-west-lincoln.html">West Lincoln</a></li>
+                        <li><a href="locksmith-beamsville.html">Beamsville</a></li>
                     </ul>
                 </div>
                 
