--- a/locksmith-niagara-falls.html
+++ b/locksmith-niagara-falls.html
@@ -10,11 +10,13 @@
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="geo.region" content="CA-ON">
     <meta name="geo.placename" content="Niagara Falls">
+    <meta name="geo.position" content="43.0896;-79.0849">
+    <meta name="ICBM" content="43.0896, -79.0849">
     <link rel="canonical" href="https://perfectkeylocksmith.com/locksmith-niagara-falls.html">
     <meta property="og:title" content="24/7 Emergency Locksmith Niagara Falls | Perfect Key">
     <meta property="og:description" content="Niagara Falls' trusted locksmith. Tourists & residents. Call (343) 312-8468">
     <meta property="og:image" content="https://perfectkeylocksmith.com/assets/images/dlogo.png">
-    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Locksmith","name":"Perfect Key Locksmith - Niagara Falls","image":"https://perfectkeylocksmith.com/assets/images/dlogo.png","url":"https://perfectkeylocksmith.com/locksmith-niagara-falls.html","telephone":"+1-343-312-8468","address":{"@type":"PostalAddress","addressLocality":"Niagara Falls","addressRegion":"ON","addressCountry":"CA"},"areaServed":{"@type":"City","name":"Niagara Falls"},"aggregateRating":{"@type":"AggregateRating","ratingValue":"4.8","reviewCount":"203"}}</script>
+    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Locksmith","name":"Perfect Key Locksmith - Niagara Falls","image":"https://perfectkeylocksmith.com/assets/images/dlogo.png","url":"https://perfectkeylocksmith.com/locksmith-niagara-falls.html","telephone":"+1-343-312-8468","address":{"@type":"PostalAddress","addressLocality":"Niagara Falls","addressRegion":"ON","addressCountry":"CA"},"areaServed":{"@type":"City","name":"Niagara Falls"},"geo":{"@type":"GeoCoordinates","latitude":43.0896,"longitude":-79.0849},"aggregateRating":{"@type":"AggregateRating","ratingValue":"4.8","reviewCount":"203"}}</script>
     <link rel="icon" type="image/png" href="assets/images/dlogo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
