--- a/locksmith-st-catharines.html
+++ b/locksmith-st-catharines.html
@@ -10,11 +10,13 @@
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="geo.region" content="CA-ON">
     <meta name="geo.placename" content="St. Catharines">
+    <meta name="geo.position" content="43.1594;-79.2469">
+    <meta name="ICBM" content="43.1594, -79.2469">
     <link rel="canonical" href="https://perfectkeylocksmith.com/locksmith-st-catharines.html">
     <meta property="og:title" content="24/7 Emergency Locksmith St. Catharines | Perfect Key">
     <meta property="og:description" content="St. Catharines' trusted locksmith. Fast response near Brock University, Pen Centre. Call (343) 312-8468">
     <meta property="og:image" content="https://perfectkeylocksmith.com/assets/images/dlogo.png">
-    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Locksmith","name":"Perfect Key Locksmith - St. Catharines","image":"https://perfectkeylocksmith.com/assets/images/dlogo.png","url":"https://perfectkeylocksmith.com/locksmith-st-catharines.html","telephone":"+1-343-312-8468","address":{"@type":"PostalAddress","addressLocality":"St. Catharines","addressRegion":"ON","addressCountry":"CA"},"areaServed":{"@type":"City","name":"St. Catharines"},"aggregateRating":{"@type":"AggregateRating","ratingValue":"4.8","reviewCount":"156"}}</script>
+    <script type="application/ld+json">{"@context":"https://schema.org","@type":"Locksmith","name":"Perfect Key Locksmith - St. Catharines","image":"https://perfectkeylocksmith.com/assets/images/dlogo.png","url":"https://perfectkeylocksmith.com/locksmith-st-catharines.html","telephone":"+1-343-312-8468","address":{"@type":"PostalAddress","addressLocality":"St. Catharines","addressRegion":"ON","addressCountry":"CA"},"areaServed":{"@type":"City","name":"St. Catharines"},"geo":{"@type":"GeoCoordinates","latitude":43.1594,"longitude":-79.2469},"aggregateRating":{"@type":"AggregateRating","ratingValue":"4.8","reviewCount":"156"}}</script>
     <link rel="icon" type="image/png" href="assets/images/dlogo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
