Performance optimization: Add .htaccess with GZIP compression, fix all empty alt tags, add image optimization script

--- a/locksmith-welland.html
+++ b/locksmith-welland.html
@@ -317,7 +317,7 @@
                 <div class="hero-grid">
                     <div class="hero-content">
                         <div class="hero-badge">
-                            <img loading="lazy" src="assets/images/dlogo.png" alt="" width="36" height="36" loading="eager">
+                            <img loading="lazy" src="assets/images/dlogo.png" alt="Perfect Key Locksmith Welland Logo" width="36" height="36" loading="eager">
                             <span>#1 Rated Locksmith in Welland</span>
                         </div>
                         <h1>24/7 Emergency <span>Locksmith in Welland</span>, Ontario</h1>
