SEO: Rename images with keyword-rich descriptive names, remove .htaccess (not needed for S3)

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="description" content="The page you're looking for doesn't exist. Contact Perfect Key Locksmith for 24/7 emergency locksmith services in Welland and the Niagara Region.">
     <meta name="robots" content="noindex, follow">
     <link rel="canonical" href="https://perfectkeylocksmith.com/404.html">
-    <link rel="icon" type="image/png" href="assets/images/dlogo.png">
+    <link rel="icon" type="image/png" href="assets/images/perfect-key-locksmith-logo.png">
     
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
