--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Terms of Service for Perfect Key Locksmith. Read our service terms, pricing policies, and warranty information for locksmith services in Welland and Niagara Region.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://perfectkeylocksmith.com/terms-of-service.html">
-    <link rel="icon" type="image/png" href="assets/images/dlogo.png">
+    <link rel="icon" type="image/png" href="assets/images/perfect-key-locksmith-logo.png">
     
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -107,7 +107,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="index.html"><img loading="lazy" src="assets/images/dlogo.png" alt="Perfect Key Locksmith"></a>
+        <a href="index.html"><img loading="lazy" src="assets/images/perfect-key-locksmith-logo.png" alt="Perfect Key Locksmith"></a>
         <h1>Terms of Service</h1>
         <p>Please read these terms carefully</p>
     </div>
