--- a/car-lockout-welland.html
+++ b/car-lockout-welland.html
@@ -23,7 +23,7 @@
     <meta property="og:url" content="https://perfectkeylocksmith.com/car-lockout-welland.html">
     <meta property="og:title" content="Car Lockout Welland | Locked Out of Your Car? We Can Help!">
     <meta property="og:description" content="Fast car lockout service in Welland. 30-minute response, no damage to vehicle. Available 24/7. Call (343) 312-8468">
-    <meta property="og:image" content="https://perfectkeylocksmith.com/assets/images/dlogo.png">
+    <meta property="og:image" content="https://perfectkeylocksmith.com/assets/images/perfect-key-locksmith-logo.png">
     
     <!-- Schema.org - Service + FAQ -->
     <script type="application/ld+json">
@@ -117,7 +117,7 @@
     }
     </script>
     
-    <link rel="icon" type="image/png" href="assets/images/dlogo.png">
+    <link rel="icon" type="image/png" href="assets/images/perfect-key-locksmith-logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -257,7 +257,7 @@
         <div class="container">
             <div class="header-inner">
                 <a href="index.html" class="logo">
-                    <img loading="lazy" src="assets/images/dlogo.png" alt="Perfect Key Locksmith Welland" width="70" height="70">
+                    <img loading="lazy" src="assets/images/perfect-key-locksmith-logo.png" alt="Perfect Key Locksmith Welland" width="70" height="70">
                 </a>
                 <nav class="nav">
                     <a href="index.html">Home</a>
@@ -542,7 +542,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div>
-                    <img loading="lazy" src="assets/images/dlogo.png" alt="Perfect Key Locksmith" style="height:60px;margin-bottom:16px">
+                    <img loading="lazy" src="assets/images/perfect-key-locksmith-logo.png" alt="Perfect Key Locksmith" style="height:60px;margin-bottom:16px">
                     <p>Welland's trusted car lockout specialists. Fast, professional, and affordable service 24/7.</p>
                 </div>
                 <div>
