--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Privacy Policy for Perfect Key Locksmith. Learn how we collect, use, and protect your personal information when you use our locksmith services in Welland and the Niagara Region.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://perfectkeylocksmith.com/privacy-policy.html">
-    <link rel="icon" type="image/png" href="assets/images/dlogo.png">
+    <link rel="icon" type="image/png" href="assets/images/perfect-key-locksmith-logo.png">
     
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -103,7 +103,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="index.html"><img loading="lazy" src="assets/images/dlogo.png" alt="Perfect Key Locksmith"></a>
+        <a href="index.html"><img loading="lazy" src="assets/images/perfect-key-locksmith-logo.png" alt="Perfect Key Locksmith"></a>
         <h1>Privacy Policy</h1>
         <p>Your privacy is important to us</p>
     </div>
