Add anti-bot protection: honeypot, time-check, Cloudflare Turnstile ready

--- a/car-key-replacement-welland.html
+++ b/car-key-replacement-welland.html
@@ -127,6 +127,7 @@
         .breadcrumb{background:var(--light);padding:12px 0;font-size:13px}
         .breadcrumb a{color:var(--text)}.breadcrumb span{color:var(--primary);font-weight:600}
     </style>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 <body>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KLHQ6LQQ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -363,6 +364,7 @@
         });
     });
     </script>
+<script src="assets/js/form-protection.js"></script>
 </body>
 </html>
 
