--- a/car-lockout-welland.html
+++ b/car-lockout-welland.html
@@ -242,6 +242,7 @@
         .service-card p{font-size:14px;color:var(--text);margin-bottom:16px}
         .service-link{color:var(--primary);font-weight:600;font-size:14px}
     </style>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 <body>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KLHQ6LQQ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -602,6 +603,7 @@
         });
     });
     </script>
+<script src="assets/js/form-protection.js"></script>
 </body>
 </html>
 
