--- a/lock-change-welland.html
+++ b/lock-change-welland.html
@@ -124,6 +124,7 @@
         .compare-table th{background:var(--dark);color:var(--white);font-weight:700}
         .compare-table tr:hover{background:var(--light)}
     </style>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 <body>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KLHQ6LQQ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -375,6 +376,7 @@
         });
     });
     </script>
+<script src="assets/js/form-protection.js"></script>
 </body>
 </html>
 
