--- a/locksmith-welland.html
+++ b/locksmith-welland.html
@@ -255,6 +255,7 @@
         .service-detail-list li:last-child{border-bottom:none}
         .service-detail-list li svg{color:var(--primary);flex-shrink:0}
     </style>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 <body>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KLHQ6LQQ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -765,5 +766,6 @@
         });
     });
     </script>
+<script src="assets/js/form-protection.js"></script>
 </body>
 </html>
