SEO: Add footer with all 14 locations, add Related Services cross-linking to 38 service pages

--- a/car-lockout-st-catharines.html
+++ b/car-lockout-st-catharines.html
@@ -33,7 +33,34 @@
         <section class="content-section alt"><div class="container"><div class="section-header"><div class="section-tag">📍 Service Areas</div><h2 class="section-title">Car Lockout Service Throughout St. Catharines</h2></div><div class="areas-grid"><div class="area-tag">Downtown</div><div class="area-tag">Brock University</div><div class="area-tag">Pen Centre</div><div class="area-tag">Port Dalhousie</div><div class="area-tag">Glenridge</div><div class="area-tag">Merritton</div><div class="area-tag">Martindale</div><div class="area-tag">Western Hill</div><div class="area-tag">Facer</div><div class="area-tag">Queenston</div><div class="area-tag">Grantham</div><div class="area-tag">St. Paul St</div></div></div></section>
         <section class="faq-section"><div class="container"><div class="section-header"><div class="section-tag">❓ FAQ</div><h2 class="section-title">Car Lockout Questions</h2></div><div class="faq-list"><div class="faq-item active"><div class="faq-question">How much does car lockout cost in St. Catharines?</div><div class="faq-answer">Car lockout in St. Catharines costs $75-$150 depending on time and vehicle. We offer 10% student discount with valid Brock University or Niagara College ID.</div></div><div class="faq-item"><div class="faq-question">How fast can you get to Brock University?</div><div class="faq-answer">We typically arrive at Brock University within 20-30 minutes. We have technicians stationed nearby for fast campus response.</div></div><div class="faq-item"><div class="faq-question">Do you service the Pen Centre parking lot?</div><div class="faq-answer">Yes! We frequently respond to car lockouts at Pen Centre. We can meet you at your vehicle's exact location in the parking lot.</div></div></div></div></section>
         <section class="cta-section"><div class="container"><h2>🚗 Locked Out in St. Catharines? Call Now!</h2><p>Fast response to Brock University, Pen Centre & all areas.</p><a href="tel:+13433128468" class="cta-phone">📞 (343) 312-8468</a></div></section>
-    </main>
+    
+    <!-- Related Services -->
+    <section style="padding:60px 0;background:#f8f9fa;">
+        <div style="max-width:1200px;margin:0 auto;padding:0 20px;">
+            <h2 style="text-align:center;margin-bottom:32px;font-size:28px;color:#0f1419;">Other Locksmith Services in St. Catharines</h2>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <a href="house-lockout-st-catharines.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🏠</span>
+                    <div><strong style="font-size:16px;">House Lockout</strong><br><small style="color:#6c757d;">Locked out of your home?</small></div>
+                </a>
+                <a href="lock-change-st-catharines.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔒</span>
+                    <div><strong style="font-size:16px;">Lock Change & Rekey</strong><br><small style="color:#6c757d;">Upgrade your security</small></div>
+                </a>
+                <a href="car-key-replacement-st-catharines.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔑</span>
+                    <div><strong style="font-size:16px;">Car Key Replacement</strong><br><small style="color:#6c757d;">Lost your car keys?</small></div>
+                </a>
+                <a href="emergency-locksmith-st-catharines.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚨</span>
+                    <div><strong style="font-size:16px;">24/7 Emergency</strong><br><small style="color:#6c757d;">Urgent locksmith help</small></div>
+                </a>
+            </div>
+            <p style="text-align:center;margin-top:28px;"><a href="locksmith-st-catharines.html" style="color:#e63946;font-weight:600;text-decoration:none;">← View All St. Catharines Locksmith Services</a></p>
+        </div>
+    </section>
+</main>
+
     <footer class="footer"><div class="container"><div class="footer-grid"><div><img loading="lazy" src="assets/images/perfect-key-locksmith-logo.png" alt="Perfect Key Locksmith" style="height:60px;margin-bottom:16px"><p>St. Catharines' trusted car lockout specialists.</p></div><div><h4>Services</h4><p><a href="house-lockout-st-catharines.html">House Lockout</a></p><p><a href="car-key-replacement-st-catharines.html">Car Key Replacement</a></p><p><a href="emergency-locksmith-st-catharines.html">Emergency Locksmith</a></p></div><div><h4>Contact</h4><p>📞 <a href="tel:+13433128468">(343) 312-8468</a></p><p>🕐 Open 24/7</p></div></div><div class="footer-bottom">© 2024 Perfect Key Locksmith. Car Lockout St. Catharines.</div></div></footer>
     <script>document.querySelectorAll('.faq-question').forEach(q=>q.addEventListener('click',()=>q.parentElement.classList.toggle('active')));document.getElementById('contactForm').addEventListener('submit',function(e){e.preventDefault();fetch('https://hook.us1.make.com/um8bvzhfnhd3v1ynrfv7rf2teb08aes7',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({name:document.getElementById('name').value,phone:document.getElementById('phone').value,location:document.getElementById('location').value,vehicle:document.getElementById('vehicle').value,source:'Car Lockout St. Catharines'})}).then(()=>{document.getElementById('responseMessage').innerHTML='<p style="color:green;font-weight:600;margin-top:16px">✓ Help is on the way!</p>';document.getElementById('contactForm').reset()})});</script>
 <script src="assets/js/form-protection.js"></script>
