--- a/emergency-locksmith-lincoln.html
+++ b/emergency-locksmith-lincoln.html
@@ -19,7 +19,22 @@
         <section class="hero"><div class="container"><h1>24 Hour <span>Emergency Locksmith</span> Lincoln</h1><p class="hero-text">Emergency locksmith serving Beamsville, Vineland, Jordan, and all Lincoln 24/7/365.</p><a href="tel:+13433128468" class="hero-phone">📞 (343) 312-8468</a></div></section>
         <section class="content-section"><div class="container"><div class="content-text"><ul><li><strong>Car Lockouts</strong></li><li><strong>House Lockouts</strong></li><li><strong>Break-in Repairs</strong></li><li><strong>Lost Keys</strong></li></ul><p style="font-size:20px;font-weight:700;color:var(--primary)">Call <a href="tel:+13433128468">(343) 312-8468</a> NOW!</p></div></div></section>
         <section class="cta-section"><div class="container"><h2>🚨 Emergency?</h2><a href="tel:+13433128468" class="cta-phone">📞 (343) 312-8468</a></div></section>
-    </main>
+    
+    <!-- Related Services -->
+    <section style="padding:60px 0;background:#f8f9fa;">
+        <div style="max-width:1200px;margin:0 auto;padding:0 20px;">
+            <h2 style="text-align:center;margin-bottom:32px;font-size:28px;color:#0f1419;">Other Locksmith Services in Lincoln</h2>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <a href="car-lockout-lincoln.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚗</span>
+                    <div><strong style="font-size:16px;">Car Lockout</strong><br><small style="color:#6c757d;">Locked out of your car?</small></div>
+                </a>
+            </div>
+            <p style="text-align:center;margin-top:28px;"><a href="locksmith-lincoln.html" style="color:#e63946;font-weight:600;text-decoration:none;">← View All Lincoln Locksmith Services</a></p>
+        </div>
+    </section>
+</main>
+
     <footer class="footer"><div class="container"><p>© 2024 Perfect Key Locksmith | 24 Hour Locksmith Lincoln</p></div></footer>
 </body>
 </html>
