--- a/lock-change-thorold.html
+++ b/lock-change-thorold.html
@@ -19,7 +19,34 @@
         <section class="hero"><div class="container"><h1>Change Your Locks in <span>Thorold</span></h1><p class="hero-text">Moving into a new place? Lost your keys? Break-in? We provide fast lock change and rekey service throughout Thorold—student apartments near Brock included.</p><a href="tel:+13433128468" class="hero-phone">📞 (343) 312-8468</a></div></section>
         <section class="content-section"><div class="container"><div class="content-text"><h2>Lock Change Service in Thorold</h2><p>Whether you're a <strong>Brock student moving into a new apartment</strong> or a homeowner wanting upgraded security, we provide professional lock change and rekey services.</p><h2>When to Change Locks</h2><ul><li>Moving into a new place</li><li>After a break-in</li><li>Lost or stolen keys</li><li>Roommate moved out</li><li>Old or worn locks</li></ul><h2>Pricing</h2><p><strong>Rekey:</strong> $50-$80/lock | <strong>Lock change:</strong> $80-$150 + lock | <strong>Smart lock:</strong> $100-$150 + lock</p><p>Call <a href="tel:+13433128468" style="color:var(--primary);font-weight:700">(343) 312-8468</a> for a quote!</p></div></div></section>
         <section class="cta-section"><div class="container"><h2>🔒 Ready to Change Locks?</h2><p>Same-day service in Thorold</p><a href="tel:+13433128468" class="cta-phone">📞 (343) 312-8468</a></div></section>
-    </main>
+    
+    <!-- Related Services -->
+    <section style="padding:60px 0;background:#f8f9fa;">
+        <div style="max-width:1200px;margin:0 auto;padding:0 20px;">
+            <h2 style="text-align:center;margin-bottom:32px;font-size:28px;color:#0f1419;">Other Locksmith Services in Thorold</h2>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <a href="car-lockout-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚗</span>
+                    <div><strong style="font-size:16px;">Car Lockout</strong><br><small style="color:#6c757d;">Locked out of your car?</small></div>
+                </a>
+                <a href="house-lockout-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🏠</span>
+                    <div><strong style="font-size:16px;">House Lockout</strong><br><small style="color:#6c757d;">Locked out of your home?</small></div>
+                </a>
+                <a href="car-key-replacement-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔑</span>
+                    <div><strong style="font-size:16px;">Car Key Replacement</strong><br><small style="color:#6c757d;">Lost your car keys?</small></div>
+                </a>
+                <a href="emergency-locksmith-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚨</span>
+                    <div><strong style="font-size:16px;">24/7 Emergency</strong><br><small style="color:#6c757d;">Urgent locksmith help</small></div>
+                </a>
+            </div>
+            <p style="text-align:center;margin-top:28px;"><a href="locksmith-thorold.html" style="color:#e63946;font-weight:600;text-decoration:none;">← View All Thorold Locksmith Services</a></p>
+        </div>
+    </section>
+</main>
+
     <footer class="footer"><div class="container"><p>© 2024 Perfect Key Locksmith | Lock Change Thorold</p></div></footer>
 </body>
 </html>
