--- a/car-key-replacement-thorold.html
+++ b/car-key-replacement-thorold.html
@@ -19,7 +19,34 @@
         <section class="hero"><div class="container"><h1>Lost Your Car Keys in <span>Thorold</span>?</h1><p class="hero-text">Skip the dealership! Our mobile locksmith comes to you anywhere in Thorold and makes new car keys on the spot. All makes and models, transponder keys, key fobs, smart keys.</p><a href="tel:+13433128468" class="hero-phone">📞 (343) 312-8468</a></div></section>
         <section class="content-section"><div class="container"><div class="content-text"><h2>Car Key Replacement in Thorold</h2><p>Lost your keys near <strong>Brock University</strong> or the <strong>Pen Centre</strong>? We come to your exact location and make new keys on the spot—even if you've lost all your keys.</p><h2>Key Types We Replace</h2><ul><li>Basic Metal Keys – $80-$120</li><li>Transponder Keys – $150-$250</li><li>Key Fobs – $180-$300</li><li>Smart Keys – $250-$400</li></ul><h2>Why Cheaper Than Dealer?</h2><ul><li>No towing required—we come to you</li><li>No dealer markup on parts</li><li>Same-day service</li><li>Student discounts available</li></ul><p>Call <a href="tel:+13433128468" style="color:var(--primary);font-weight:700">(343) 312-8468</a> for a quote!</p></div></div></section>
         <section class="cta-section"><div class="container"><h2>🔑 Need a Car Key Made?</h2><p>Mobile service anywhere in Thorold</p><a href="tel:+13433128468" class="cta-phone">📞 (343) 312-8468</a></div></section>
-    </main>
+    
+    <!-- Related Services -->
+    <section style="padding:60px 0;background:#f8f9fa;">
+        <div style="max-width:1200px;margin:0 auto;padding:0 20px;">
+            <h2 style="text-align:center;margin-bottom:32px;font-size:28px;color:#0f1419;">Other Locksmith Services in Thorold</h2>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <a href="car-lockout-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚗</span>
+                    <div><strong style="font-size:16px;">Car Lockout</strong><br><small style="color:#6c757d;">Locked out of your car?</small></div>
+                </a>
+                <a href="house-lockout-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🏠</span>
+                    <div><strong style="font-size:16px;">House Lockout</strong><br><small style="color:#6c757d;">Locked out of your home?</small></div>
+                </a>
+                <a href="lock-change-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔒</span>
+                    <div><strong style="font-size:16px;">Lock Change & Rekey</strong><br><small style="color:#6c757d;">Upgrade your security</small></div>
+                </a>
+                <a href="emergency-locksmith-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚨</span>
+                    <div><strong style="font-size:16px;">24/7 Emergency</strong><br><small style="color:#6c757d;">Urgent locksmith help</small></div>
+                </a>
+            </div>
+            <p style="text-align:center;margin-top:28px;"><a href="locksmith-thorold.html" style="color:#e63946;font-weight:600;text-decoration:none;">← View All Thorold Locksmith Services</a></p>
+        </div>
+    </section>
+</main>
+
     <footer class="footer"><div class="container"><p>© 2024 Perfect Key Locksmith | Car Key Replacement Thorold</p></div></footer>
 </body>
 </html>
