--- a/car-lockout-fort-erie.html
+++ b/car-lockout-fort-erie.html
@@ -19,7 +19,34 @@
         <section class="hero"><div class="container"><h1>Locked Out of Your Car in <span>Fort Erie</span>?</h1><p class="hero-text">Fast car lockout service throughout Fort Erie—Peace Bridge area, Crystal Beach, Ridgeway, and all neighborhoods. Professional tools, no damage, 24/7.</p><a href="tel:+13433128468" class="hero-phone">📞 (343) 312-8468</a></div></section>
         <section class="content-section"><div class="container"><div class="content-text"><h2>Car Lockout Service in Fort Erie</h2><p>Locked your keys in the car near <strong>Peace Bridge</strong>? Stranded at <strong>Crystal Beach</strong>? We respond fast throughout Fort Erie.</p><h2>Service Areas</h2><ul><li>Peace Bridge & Border Area</li><li>Crystal Beach</li><li>Ridgeway</li><li>Downtown Fort Erie</li><li>Stevensville</li><li>Bridgeburg</li></ul><h2>Pricing</h2><p><strong>Daytime:</strong> $75-$100 | <strong>Nights/Weekends:</strong> $100-$150</p><p>Call <a href="tel:+13433128468" style="color:var(--primary);font-weight:700">(343) 312-8468</a>!</p></div></div></section>
         <section class="cta-section"><div class="container"><h2>🚗 Locked Out? Call Now!</h2><p>Fast response in Fort Erie</p><a href="tel:+13433128468" class="cta-phone">📞 (343) 312-8468</a></div></section>
-    </main>
+    
+    <!-- Related Services -->
+    <section style="padding:60px 0;background:#f8f9fa;">
+        <div style="max-width:1200px;margin:0 auto;padding:0 20px;">
+            <h2 style="text-align:center;margin-bottom:32px;font-size:28px;color:#0f1419;">Other Locksmith Services in Fort Erie</h2>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <a href="house-lockout-fort-erie.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🏠</span>
+                    <div><strong style="font-size:16px;">House Lockout</strong><br><small style="color:#6c757d;">Locked out of your home?</small></div>
+                </a>
+                <a href="lock-change-fort-erie.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔒</span>
+                    <div><strong style="font-size:16px;">Lock Change & Rekey</strong><br><small style="color:#6c757d;">Upgrade your security</small></div>
+                </a>
+                <a href="car-key-replacement-fort-erie.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔑</span>
+                    <div><strong style="font-size:16px;">Car Key Replacement</strong><br><small style="color:#6c757d;">Lost your car keys?</small></div>
+                </a>
+                <a href="emergency-locksmith-fort-erie.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚨</span>
+                    <div><strong style="font-size:16px;">24/7 Emergency</strong><br><small style="color:#6c757d;">Urgent locksmith help</small></div>
+                </a>
+            </div>
+            <p style="text-align:center;margin-top:28px;"><a href="locksmith-fort-erie.html" style="color:#e63946;font-weight:600;text-decoration:none;">← View All Fort Erie Locksmith Services</a></p>
+        </div>
+    </section>
+</main>
+
     <footer class="footer"><div class="container"><p>© 2024 Perfect Key Locksmith | Car Lockout Fort Erie</p></div></footer>
 </body>
 </html>
