--- a/car-lockout-grimsby.html
+++ b/car-lockout-grimsby.html
@@ -19,7 +19,22 @@
         <section class="hero"><div class="container"><h1>Locked Out in <span>Grimsby</span>?</h1><p class="hero-text">Fast car lockout service throughout Grimsby and West Niagara. Professional tools, no damage, 24/7.</p><a href="tel:+13433128468" class="hero-phone">📞 (343) 312-8468</a></div></section>
         <section class="content-section"><div class="container"><div class="content-text"><h2>Service Areas</h2><ul><li>Downtown Grimsby</li><li>Grimsby Beach</li><li>Beamsville (nearby)</li><li>QEW corridor</li></ul><h2>Pricing</h2><p><strong>Daytime:</strong> $75-$100 | <strong>Nights:</strong> $100-$150</p><p>Call <a href="tel:+13433128468" style="color:var(--primary);font-weight:700">(343) 312-8468</a>!</p></div></div></section>
         <section class="cta-section"><div class="container"><h2>🚗 Call Now!</h2><a href="tel:+13433128468" class="cta-phone">📞 (343) 312-8468</a></div></section>
-    </main>
+    
+    <!-- Related Services -->
+    <section style="padding:60px 0;background:#f8f9fa;">
+        <div style="max-width:1200px;margin:0 auto;padding:0 20px;">
+            <h2 style="text-align:center;margin-bottom:32px;font-size:28px;color:#0f1419;">Other Locksmith Services in Grimsby</h2>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <a href="emergency-locksmith-grimsby.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚨</span>
+                    <div><strong style="font-size:16px;">24/7 Emergency</strong><br><small style="color:#6c757d;">Urgent locksmith help</small></div>
+                </a>
+            </div>
+            <p style="text-align:center;margin-top:28px;"><a href="locksmith-grimsby.html" style="color:#e63946;font-weight:600;text-decoration:none;">← View All Grimsby Locksmith Services</a></p>
+        </div>
+    </section>
+</main>
+
     <footer class="footer"><div class="container"><p>© 2024 Perfect Key Locksmith | Car Lockout Grimsby</p></div></footer>
 </body>
 </html>
