--- a/car-lockout-thorold.html
+++ b/car-lockout-thorold.html
@@ -20,7 +20,34 @@
         <section class="hero"><div class="container"><h1>Locked Out of Your Car in <span>Thorold</span>?</h1><p class="hero-text">Fast car lockout service throughout Thorold—near Brock University, Pen Centre, Downtown, and all neighborhoods. Our technicians arrive in 30 minutes with professional tools to unlock your vehicle without damage.</p><a href="tel:+13433128468" class="hero-phone">📞 (343) 312-8468</a></div></section>
         <section class="content-section"><div class="container"><div class="content-text"><h2>Car Lockout Service in Thorold, Ontario</h2><p>Locked your keys in the car near <strong>Brock University</strong>? Stranded at the <strong>Pen Centre</strong>? Our Thorold car lockout specialists provide fast, damage-free vehicle unlocking 24/7.</p><h2>Why Choose Us?</h2><ul><li>30-minute response anywhere in Thorold</li><li>No damage to your vehicle guaranteed</li><li>All car makes and models</li><li>Upfront pricing—no surprises</li><li>24/7 availability including holidays</li><li>Licensed and insured technicians</li></ul><h2>Service Areas in Thorold</h2><ul><li>Downtown Thorold</li><li>Brock University area</li><li>Pen Centre & Glendale</li><li>Port Robinson</li><li>Allanburg</li><li>Thorold South</li></ul><h2>Car Lockout Pricing</h2><p><strong>Daytime:</strong> $75-$100 | <strong>Nights/Weekends:</strong> $100-$150</p><p>Call <a href="tel:+13433128468" style="color:var(--primary);font-weight:700">(343) 312-8468</a> for immediate help!</p></div></div></section>
         <section class="cta-section"><div class="container"><h2>🚗 Locked Out? Call Now!</h2><p>Fast response throughout Thorold</p><a href="tel:+13433128468" class="cta-phone">📞 (343) 312-8468</a></div></section>
-    </main>
+    
+    <!-- Related Services -->
+    <section style="padding:60px 0;background:#f8f9fa;">
+        <div style="max-width:1200px;margin:0 auto;padding:0 20px;">
+            <h2 style="text-align:center;margin-bottom:32px;font-size:28px;color:#0f1419;">Other Locksmith Services in Thorold</h2>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <a href="house-lockout-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🏠</span>
+                    <div><strong style="font-size:16px;">House Lockout</strong><br><small style="color:#6c757d;">Locked out of your home?</small></div>
+                </a>
+                <a href="lock-change-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔒</span>
+                    <div><strong style="font-size:16px;">Lock Change & Rekey</strong><br><small style="color:#6c757d;">Upgrade your security</small></div>
+                </a>
+                <a href="car-key-replacement-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔑</span>
+                    <div><strong style="font-size:16px;">Car Key Replacement</strong><br><small style="color:#6c757d;">Lost your car keys?</small></div>
+                </a>
+                <a href="emergency-locksmith-thorold.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚨</span>
+                    <div><strong style="font-size:16px;">24/7 Emergency</strong><br><small style="color:#6c757d;">Urgent locksmith help</small></div>
+                </a>
+            </div>
+            <p style="text-align:center;margin-top:28px;"><a href="locksmith-thorold.html" style="color:#e63946;font-weight:600;text-decoration:none;">← View All Thorold Locksmith Services</a></p>
+        </div>
+    </section>
+</main>
+
     <footer class="footer"><div class="container"><p>© 2024 Perfect Key Locksmith | Car Lockout Thorold</p></div></footer>
 </body>
 </html>
