--- a/house-lockout-port-colborne.html
+++ b/house-lockout-port-colborne.html
@@ -19,7 +19,34 @@
         <section class="hero"><div class="container"><h1>Locked Out of Your House in <span>Port Colborne</span>?</h1><p class="hero-text">Our residential locksmith specialists serve all Port Colborne neighborhoods. Fast, damage-free entry 24/7. We unlock all lock types without harming your door.</p><a href="tel:+13433128468" class="hero-phone">📞 (343) 312-8468</a></div></section>
         <section class="content-section"><div class="container"><div class="content-text"><h2>House Lockout Service in Port Colborne</h2><p>Locked out of your home in Port Colborne? We provide fast, professional residential lockout service throughout the city.</p><h2>Why Choose Us?</h2><ul><li>30-minute response anywhere in Port Colborne</li><li>No damage to your door or lock</li><li>All lock types—deadbolts, smart locks, etc.</li><li>ID verification for your security</li><li>Upfront pricing—no surprises</li></ul><h2>Pricing</h2><p><strong>Standard locks:</strong> $75-$100 | <strong>Deadbolts:</strong> $85-$125 | <strong>After-hours:</strong> +$25-$50</p><p>Call <a href="tel:+13433128468" style="color:var(--primary);font-weight:700">(343) 312-8468</a> now!</p></div></div></section>
         <section class="cta-section"><div class="container"><h2>🏠 Locked Out? Call Now!</h2><p>Fast response throughout Port Colborne</p><a href="tel:+13433128468" class="cta-phone">📞 (343) 312-8468</a></div></section>
-    </main>
+    
+    <!-- Related Services -->
+    <section style="padding:60px 0;background:#f8f9fa;">
+        <div style="max-width:1200px;margin:0 auto;padding:0 20px;">
+            <h2 style="text-align:center;margin-bottom:32px;font-size:28px;color:#0f1419;">Other Locksmith Services in Port Colborne</h2>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <a href="car-lockout-port-colborne.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚗</span>
+                    <div><strong style="font-size:16px;">Car Lockout</strong><br><small style="color:#6c757d;">Locked out of your car?</small></div>
+                </a>
+                <a href="lock-change-port-colborne.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔒</span>
+                    <div><strong style="font-size:16px;">Lock Change & Rekey</strong><br><small style="color:#6c757d;">Upgrade your security</small></div>
+                </a>
+                <a href="car-key-replacement-port-colborne.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔑</span>
+                    <div><strong style="font-size:16px;">Car Key Replacement</strong><br><small style="color:#6c757d;">Lost your car keys?</small></div>
+                </a>
+                <a href="emergency-locksmith-port-colborne.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚨</span>
+                    <div><strong style="font-size:16px;">24/7 Emergency</strong><br><small style="color:#6c757d;">Urgent locksmith help</small></div>
+                </a>
+            </div>
+            <p style="text-align:center;margin-top:28px;"><a href="locksmith-port-colborne.html" style="color:#e63946;font-weight:600;text-decoration:none;">← View All Port Colborne Locksmith Services</a></p>
+        </div>
+    </section>
+</main>
+
     <footer class="footer"><div class="container"><p>© 2024 Perfect Key Locksmith | House Lockout Port Colborne</p></div></footer>
 </body>
 </html>
