--- a/house-lockout-st-catharines.html
+++ b/house-lockout-st-catharines.html
@@ -32,7 +32,34 @@
         <section class="content-section alt"><div class="container"><div class="section-header"><h2 class="section-title">Service Areas in St. Catharines</h2></div><div class="areas-grid"><div class="area-tag">Downtown</div><div class="area-tag">Brock Area</div><div class="area-tag">Glenridge</div><div class="area-tag">Port Dalhousie</div><div class="area-tag">Martindale</div><div class="area-tag">Merritton</div><div class="area-tag">Western Hill</div><div class="area-tag">Facer</div><div class="area-tag">Queenston</div><div class="area-tag">Grantham</div><div class="area-tag">St. Paul St</div><div class="area-tag">Geneva St</div></div></div></section>
         <section class="faq-section"><div class="container"><div class="section-header"><h2 class="section-title">House Lockout FAQ</h2></div><div class="faq-list"><div class="faq-item active"><div class="faq-question">How much does house lockout cost in St. Catharines?</div><div class="faq-answer">House lockout in St. Catharines costs $75-$125 depending on lock type and time. We offer 10% student discount with valid ID.</div></div><div class="faq-item"><div class="faq-question">Do you service student apartments?</div><div class="faq-answer">Yes! We frequently help Brock University students locked out of apartments. We offer student discounts and fast response to the campus area.</div></div></div></div></section>
         <section class="cta-section"><div class="container"><h2>🏠 Locked Out? Call Now!</h2><p>Fast response throughout St. Catharines</p><a href="tel:+13433128468" class="cta-phone">📞 (343) 312-8468</a></div></section>
-    </main>
+    
+    <!-- Related Services -->
+    <section style="padding:60px 0;background:#f8f9fa;">
+        <div style="max-width:1200px;margin:0 auto;padding:0 20px;">
+            <h2 style="text-align:center;margin-bottom:32px;font-size:28px;color:#0f1419;">Other Locksmith Services in St. Catharines</h2>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <a href="car-lockout-st-catharines.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚗</span>
+                    <div><strong style="font-size:16px;">Car Lockout</strong><br><small style="color:#6c757d;">Locked out of your car?</small></div>
+                </a>
+                <a href="lock-change-st-catharines.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔒</span>
+                    <div><strong style="font-size:16px;">Lock Change & Rekey</strong><br><small style="color:#6c757d;">Upgrade your security</small></div>
+                </a>
+                <a href="car-key-replacement-st-catharines.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔑</span>
+                    <div><strong style="font-size:16px;">Car Key Replacement</strong><br><small style="color:#6c757d;">Lost your car keys?</small></div>
+                </a>
+                <a href="emergency-locksmith-st-catharines.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚨</span>
+                    <div><strong style="font-size:16px;">24/7 Emergency</strong><br><small style="color:#6c757d;">Urgent locksmith help</small></div>
+                </a>
+            </div>
+            <p style="text-align:center;margin-top:28px;"><a href="locksmith-st-catharines.html" style="color:#e63946;font-weight:600;text-decoration:none;">← View All St. Catharines Locksmith Services</a></p>
+        </div>
+    </section>
+</main>
+
     <footer class="footer"><div class="container"><div class="footer-grid"><div><img loading="lazy" src="assets/images/perfect-key-locksmith-logo.png" alt="Perfect Key Locksmith" style="height:60px;margin-bottom:16px"><p>St. Catharines house lockout specialists.</p></div><div><h4>Services</h4><p><a href="car-lockout-st-catharines.html">Car Lockout</a></p><p><a href="lock-change-st-catharines.html">Lock Change</a></p><p><a href="emergency-locksmith-st-catharines.html">Emergency</a></p></div><div><h4>Contact</h4><p>📞 <a href="tel:+13433128468">(343) 312-8468</a></p><p>🕐 24/7</p></div></div><div class="footer-bottom">© 2024 Perfect Key Locksmith.</div></div></footer>
     <script>document.querySelectorAll('.faq-question').forEach(q=>q.addEventListener('click',()=>q.parentElement.classList.toggle('active')));document.getElementById('contactForm').addEventListener('submit',function(e){e.preventDefault();fetch('https://hook.us1.make.com/um8bvzhfnhd3v1ynrfv7rf2teb08aes7',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({name:document.getElementById('name').value,phone:document.getElementById('phone').value,address:document.getElementById('address').value,source:'House Lockout St. Catharines'})}).then(()=>{document.getElementById('responseMessage').innerHTML='<p style="color:green;font-weight:600;margin-top:16px">✓ Help is on the way!</p>';document.getElementById('contactForm').reset()})});</script>
 <script src="assets/js/form-protection.js"></script>
