--- a/lock-change-niagara-falls.html
+++ b/lock-change-niagara-falls.html
@@ -26,7 +26,34 @@
         <section class="content-section"><div class="container"><div class="content-grid"><div class="content-text"><h2>Lock Change Service in Niagara Falls</h2><p>Whether you're moving into a new home in <strong>Lundy's Lane</strong>, had a break-in in <strong>Chippawa</strong>, or just want upgraded security—we provide professional lock change and rekey services.</p><h3>When to Change Locks</h3><ul><li><strong>Moving into a new place</strong></li><li><strong>After a break-in</strong></li><li><strong>Lost or stolen keys</strong></li><li><strong>Old or worn locks</strong></li><li><strong>Upgrading security</strong></li></ul></div><div class="content-text"><h2>Pricing</h2><h3>Rekey</h3><ul><li>Single lock: $50-$80</li><li>Whole house: $100-$200</li></ul><h3>Lock Change</h3><ul><li>Deadbolt: $80-$120 + lock</li><li>High-security: $150-$250 + lock</li><li>Smart lock: $100-$150 + lock</li></ul><p>Call <a href="tel:+13433128468" style="color:var(--primary);font-weight:700">(343) 312-8468</a>!</p></div></div></div></section>
         <section class="content-section alt"><div class="container"><div class="section-header"><h2 class="section-title">Our Services</h2></div><div class="services-grid"><div class="service-card"><h4>🔐 Deadbolt Install</h4><p>Grade 1 & 2 deadbolts.</p><p class="service-price">From $80</p></div><div class="service-card"><h4>📱 Smart Lock</h4><p>August, Yale, Schlage.</p><p class="service-price">From $150</p></div><div class="service-card"><h4>🔑 Lock Rekey</h4><p>New keys, same lock.</p><p class="service-price">From $50</p></div></div></div></section>
         <section class="cta-section"><div class="container"><h2>🔒 Ready to Change Locks?</h2><p>Same-day service in Niagara Falls</p><a href="tel:+13433128468" class="cta-phone">📞 (343) 312-8468</a></div></section>
-    </main>
+    
+    <!-- Related Services -->
+    <section style="padding:60px 0;background:#f8f9fa;">
+        <div style="max-width:1200px;margin:0 auto;padding:0 20px;">
+            <h2 style="text-align:center;margin-bottom:32px;font-size:28px;color:#0f1419;">Other Locksmith Services in Niagara Falls</h2>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <a href="car-lockout-niagara-falls.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚗</span>
+                    <div><strong style="font-size:16px;">Car Lockout</strong><br><small style="color:#6c757d;">Locked out of your car?</small></div>
+                </a>
+                <a href="house-lockout-niagara-falls.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🏠</span>
+                    <div><strong style="font-size:16px;">House Lockout</strong><br><small style="color:#6c757d;">Locked out of your home?</small></div>
+                </a>
+                <a href="car-key-replacement-niagara-falls.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🔑</span>
+                    <div><strong style="font-size:16px;">Car Key Replacement</strong><br><small style="color:#6c757d;">Lost your car keys?</small></div>
+                </a>
+                <a href="emergency-locksmith-niagara-falls.html" style="display:flex;align-items:center;gap:12px;padding:20px;background:#fff;border-radius:12px;text-decoration:none;color:#0f1419;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:transform 0.2s,box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.12)'" onmouseout="this.style.transform='';this.style.boxShadow='0 2px 8px rgba(0,0,0,0.08)'">
+                    <span style="font-size:28px;">🚨</span>
+                    <div><strong style="font-size:16px;">24/7 Emergency</strong><br><small style="color:#6c757d;">Urgent locksmith help</small></div>
+                </a>
+            </div>
+            <p style="text-align:center;margin-top:28px;"><a href="locksmith-niagara-falls.html" style="color:#e63946;font-weight:600;text-decoration:none;">← View All Niagara Falls Locksmith Services</a></p>
+        </div>
+    </section>
+</main>
+
     <footer class="footer"><div class="container"><div class="footer-grid"><div><img loading="lazy" src="assets/images/perfect-key-locksmith-logo.png" alt="Perfect Key Locksmith" style="height:60px;margin-bottom:16px"><p>Niagara Falls lock change specialists.</p></div><div><h4>Services</h4><p><a href="car-lockout-niagara-falls.html">Car Lockout</a></p><p><a href="house-lockout-niagara-falls.html">House Lockout</a></p><p><a href="emergency-locksmith-niagara-falls.html">Emergency</a></p></div><div><h4>Contact</h4><p>📞 <a href="tel:+13433128468">(343) 312-8468</a></p><p>🕐 24/7</p></div></div><div class="footer-bottom">© 2024 Perfect Key Locksmith.</div></div></footer>
     <script>document.getElementById('contactForm').addEventListener('submit',function(e){e.preventDefault();fetch('https://hook.us1.make.com/um8bvzhfnhd3v1ynrfv7rf2teb08aes7',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({name:document.getElementById('name').value,phone:document.getElementById('phone').value,address:document.getElementById('address').value,service:document.getElementById('service').value,source:'Lock Change Niagara Falls'})}).then(()=>{document.getElementById('responseMessage').innerHTML='<p style="color:green;font-weight:600;margin-top:16px">✓ Quote received!</p>';document.getElementById('contactForm').reset()})});</script>
 <script src="assets/js/form-protection.js"></script>
